@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1011 2003/05/09 03:07:11 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.1012 2003/05/09 04:20:54 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-05-09 11:42 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * source/pp/ppcore.c
+    ! Fixed SearnRep() to reset <bDontInstanciate> and <lastchar> when NEW Group is encountered.
 
 2003-05-08 21:19 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * include/hbexprb.c
